syntax = "proto3";

option go_package = "github.com/overseven/try-network/network/protocol/proto/proto";

package pcommon;

import "google/protobuf/timestamp.proto";


message TransAirDrop{
    uint32 transactionCounter = 1;
    bytes receiver = 2;
    double pay = 3;
    double fee = 4;
    string message = 5;
    google.protobuf.Timestamp timestamp = 6;
    bytes node = 7;
    bytes sign = 8;
  }
  
  message TransTransfer{
    bytes sender = 1;
    uint32 transactionCounter = 2;
    bytes receiver = 3;
    double pay = 4;
    double fee = 5;
    string message = 6;
    google.protobuf.Timestamp timestamp = 7;
    bytes node = 8;
    bytes sign = 9;
  }

  message TransVotingInit{
    bytes sender = 1;
    uint32 transactionCounter = 2;
    uint64 votingId = 3;
    uint32 parameter = 4;
    string value = 5;
    double fee = 6;
    google.protobuf.Timestamp timestamp = 7;
    bytes node = 8;
    bytes sign = 9;
  }

message TransVote{
  bytes sender = 1;
  uint32 transactionCounter = 2;
  uint64 votingId = 3;
  string opinion = 4;
  double fee = 5;
  google.protobuf.Timestamp timestamp = 6;
  bytes node = 7;
  bytes sign = 8;
}

message TransVotingFinish{
  bytes sender = 1;
  uint32 transactionCounter = 2;
  uint64 votingId = 3;
  double fee = 4;
  google.protobuf.Timestamp timestamp = 5;
  bytes node = 6;
  bytes sign = 7;
}

  message Transaction{
      uint32 protocolVersion = 1;
      oneof trans{
        TransTransfer transfer = 3;
        TransAirDrop airdrop = 4;
        TransVotingInit votingInit = 5;
        TransVote vote = 6;
        TransVotingFinish votingFinish = 7;
      }
  }
  
  message Block{
      uint32 protocolVersion = 1;
      uint64 blockId = 2;
      repeated Transaction trans = 3;
      bytes prevBlockHash = 4;
      uint32 difficulty = 5;
      bytes miner = 6;
      bytes blockHash = 7;
      bytes nonce = 8;
  }
  
  